# ecn_ros2016_solution

./: .gitignore  .groupeB  CMakeLists.txt  CMakeLists.txt.user.bak.bak  README.md  main.cpp  package.xml
include/ecn_ros2016/: color_detector.h
launch/: color_choice.py  colors.yaml  control.launch  manual.launch  vrep.launch
scene/: baxter.ttt  left_dummy.urdf  right_dummy.urdf
src/: color_detector.cpp
subject/: midwa_ds.tex  midwa_ds.tex.backup
