<?xml version="1.0"?>
<package format="2">
  <name>ecn_ros2016</name>
  <version>0.0.0</version>
  <description>The ecn_ros2016 package</description>

  <maintainer email="olivier.kermorgant@ec-nantes.fr">Olivier Kermorgant</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>std_msgs</depend>
  <depend>vrep_common</depend>
  <depend>image_transport</depend>

</package>
